Fix sidebars space still taken on small screens

--- a/static/styles/styles.scss
+++ b/static/styles/styles.scss
@@ -192,7 +192,7 @@ footer {
   }
 
   // hide sidebars
-  aside > * {
+  aside {
     display: none;
   }
 }
